k8s/manifest/deployment.yaml
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: goexample-deployment
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: goexample
  template:
    metadata:
      labels:
        app: goexample
    spec:
      containers:
      - name: goexample-container
        image: 28cloud/devopsified:v1
        ports:
        - containerPort: 8080
