k8s/manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: goexample-service
  namespace: default  
spec:
  selector:
    app: goexample
  ports:  
    - protocol: TCP
      port: 80
      targetPort: 8080 
  type: ClusterIP
