k8s/manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: goexample-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: goexample.local
    http:
      paths: 
       - path: /
         pathType: Prefix
         backend:
           service:
             name: goexample-service
             port:
               number: 80
